--- a/orion-core/Cargo.toml
+++ b/orion-core/Cargo.toml
@@ -4,7 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+anyhow = { version = "1.0.70" }
 
-[target.'cfg(target_arch = "x86_64")'.dependencies]
+[target.'cfg(windows)'.dependencies]
+winapi = { version = "0.3.9", features = [ "winuser", "libloaderapi", "errhandlingapi" ] }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
