--- a/orion-core/Cargo.toml
+++ b/orion-core/Cargo.toml
@@ -10,3 +10,5 @@ anyhow = { version = "1.0.70" }
 winapi = { version = "0.3.9", features = [ "winuser", "libloaderapi", "errhandlingapi" ] }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
+web-sys = { version = "0.3.61", features = [ "Window", "Document", "Element", "HtmlCanvasElement", "CanvasRenderingContext2d", "MouseEvent", "console" ]}
+wasm-bindgen = { version = "0.2.84" }
