--- a/orion-core/Cargo.toml
+++ b/orion-core/Cargo.toml
@@ -12,7 +12,7 @@ winapi = { version = "0.3.9", features = [ "winuser", "libloaderapi", "errhandli
 simple_logger = { version = "4.1.0", default-features = false, features = [ "timestamps" ]}
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
-web-sys = { version = "0.3.61", features = [ "Window", "Document", "Element", "HtmlCanvasElement", "CanvasRenderingContext2d", "MouseEvent", "console" ]}
+web-sys = { version = "0.3.61", features = [ "Window", "Document", "Element", "HtmlCanvasElement", "CanvasRenderingContext2d", "MouseEvent", "KeyboardEvent", "console" ]}
 wasm-bindgen = { version = "0.2.84" }
 console_log = { version = "1.0.0" }
 console_error_panic_hook = { version = "0.1.7" }
