--- a/orion-core/Cargo.toml
+++ b/orion-core/Cargo.toml
@@ -20,7 +20,7 @@ simple_logger = { version = "4.1.0", default-features = false, features = [ "tim
 
 [target.'cfg(all(target_os = "linux", target_arch = "x86_64"))'.dependencies]
 simple_logger = { version = "4.1.0", default-features = false, features = [ "timestamps" ]}
-x11 = { version = "2.21.0" }
+x11 = { version = "2.21.0", features = [ "xlib", "glx" ] }
 
 [target.'cfg(all(target_os = "unknown", target_arch = "wasm32"))'.dependencies]
 web-sys = { version = "0.3.61", features = [
