--- a/orion-core/Cargo.toml
+++ b/orion-core/Cargo.toml
@@ -19,8 +19,11 @@ winapi = { version = "0.3.9", features = [
 simple_logger = { version = "4.1.0", default-features = false, features = [ "timestamps" ]}
 
 [target.'cfg(all(target_os = "linux", target_arch = "x86_64"))'.dependencies]
+x11 = { version = "2.21.0", features = [
+    "xlib",
+    "glx" 
+]}
 simple_logger = { version = "4.1.0", default-features = false, features = [ "timestamps" ]}
-x11 = { version = "2.21.0", features = [ "xlib", "glx" ] }
 
 [target.'cfg(all(target_os = "unknown", target_arch = "wasm32"))'.dependencies]
 web-sys = { version = "0.3.61", features = [
