--- a/orion-core/Cargo.toml
+++ b/orion-core/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 anyhow = { version = "1.0.70" }
 log = { version = "0.4.17" }
+glow = { version = "0.12.1" }
 
 [build-dependencies]
 cfg_aliases = { version = "0.1.1" }
