--- a/orion-core/Cargo.toml
+++ b/orion-core/Cargo.toml
@@ -37,7 +37,8 @@ web-sys = { version = "0.3.61", features = [
     "MouseEvent", 
     "WheelEvent", 
     "KeyboardEvent", 
-    "console"
+    "console",
+    "CssStyleDeclaration"
 ]}
 wasm-bindgen = { version = "0.2.84" }
 console_log = { version = "1.0.0" }
