--- a/orion-core/Cargo.toml
+++ b/orion-core/Cargo.toml
@@ -8,6 +8,7 @@ anyhow = { version = "1.0.70" }
 log = { version = "0.4.17" }
 glow = { version = "0.12.1" }
 chrono = { version = "0.4.23" } # temporary
+glam = { version = "0.24.0" }
 
 [build-dependencies]
 cfg_aliases = { version = "0.1.1" }
