--- a/orion-core/Cargo.toml
+++ b/orion-core/Cargo.toml
@@ -7,7 +7,6 @@ edition = "2021"
 anyhow = { version = "1.0.70" }
 log = { version = "0.4.17" }
 glow = { version = "0.12.1" }
-chrono = { version = "0.4.23" } # temporary
 glam = { version = "0.24.0" }
 egui = { version = "0.21.0" }
 
@@ -21,6 +20,7 @@ winapi = { version = "0.3.9", features = [
     "errhandlingapi" 
 ]}
 simple_logger = { version = "4.1.0", default-features = false, features = [ "timestamps" ]}
+instant = { version = "0.1.12" }
 
 [target.'cfg(all(target_os = "linux", target_arch = "x86_64"))'.dependencies]
 x11 = { version = "2.21.0", features = [
@@ -29,6 +29,7 @@ x11 = { version = "2.21.0", features = [
     "glx" 
 ]}
 simple_logger = { version = "4.1.0", default-features = false, features = [ "timestamps" ]}
+instant = { version = "0.1.12" }
 
 [target.'cfg(all(target_os = "unknown", target_arch = "wasm32"))'.dependencies]
 web-sys = { version = "0.3.61", features = [
@@ -46,3 +47,4 @@ web-sys = { version = "0.3.61", features = [
 wasm-bindgen = { version = "0.2.84" }
 console_log = { version = "1.0.0" }
 console_error_panic_hook = { version = "0.1.7" }
+instant = { version = "0.1.12", features = [ "wasm-bindgen" ] }
