--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -82,7 +82,7 @@
         {
             "label": "build and run windows release",
             "type": "shell",
-            "command": "${workspaceFolder}/target/release/benchmark.exe",
+            "command": "${workspaceFolder}/target/x86_64-pc-windows-msvc/release/benchmark.exe",
             "options": {
                 "cwd": "${workspaceFolder}/examples/benchmark/"
             },
@@ -90,7 +90,7 @@
                 "kind": "build"
             },
             "dependsOn": [
-                "build release windows"
+                "build windows release"
             ]
         },
         {
@@ -104,7 +104,7 @@
                 "kind": "build"
             },
             "dependsOn": [
-                "build release linux"
+                "build linux release"
             ]
         }
     ],
