--- a/examples/benchmark/Cargo.toml
+++ b/examples/benchmark/Cargo.toml
@@ -7,4 +7,7 @@ edition = "2021"
 orion-core = { path = "../../orion-core" }
 fastrand = { version = "1.9.0" }
 
+[build-dependencies]
+orion-core = { path = "../../orion-core" }
+
 [target.'cfg(target_arch = "wasm32")'.dependencies]
