--- a/orion-core/Cargo.toml
+++ b/orion-core/Cargo.toml
@@ -9,6 +9,8 @@ log = { version = "0.4.17" }
 glow = { version = "0.12.1" }
 glam = { version = "0.24.0" }
 egui = { version = "0.21.0" }
+zip = { version = "0.6.5", default-features = false, features = [ "deflate" ] }
+walkdir = { version = "2.3.3" }
 
 [build-dependencies]
 cfg_aliases = { version = "0.1.1" }
