--- a/orion-core/Cargo.toml
+++ b/orion-core/Cargo.toml
@@ -44,8 +44,13 @@ web-sys = { version = "0.3.61", features = [
     "WheelEvent", 
     "KeyboardEvent", 
     "console",
-    "CssStyleDeclaration"
+    "CssStyleDeclaration",
+    "Request",
+    "RequestInit",
+    "RequestMode",
+    "Response"
 ]}
+js-sys = { version = "0.3.61" }
 wasm-bindgen = { version = "0.2.84" }
 console_log = { version = "1.0.0" }
 console_error_panic_hook = { version = "0.1.7" }
