--- a/orion-core/Cargo.toml
+++ b/orion-core/Cargo.toml
@@ -12,6 +12,7 @@ egui = { version = "0.21.0" }
 zip = { version = "0.6.5", default-features = false, features = [ "deflate" ] }
 walkdir = { version = "2.3.3" }
 png = { version = "0.17.8" }
+quick-xml = { version = "0.28.2" }
 
 [build-dependencies]
 cfg_aliases = { version = "0.1.1" }
