Add atlas animations

--- a/orion-core/Cargo.toml
+++ b/orion-core/Cargo.toml
@@ -13,7 +13,7 @@ zip = { version = "0.6.5", default-features = false, features = [ "deflate" ] }
 walkdir = { version = "2.3.3" }
 png = { version = "0.17.8" }
 quick-xml = { version = "0.28.2" }
-rustc-hash = "1.1.0"
+rustc-hash = { version = "1.1.0" }
 
 [build-dependencies]
 cfg_aliases = { version = "0.1.1" }
