--- a/orion-template/Cargo.toml
+++ b/orion-template/Cargo.toml
@@ -8,3 +8,8 @@ orion-core = { path = "../orion-core" }
 
 [build-dependencies]
 orion-core = { path = "../orion-core" }
+
+# [profile.release]
+# lto = true
+# codegen-units = 1
+# panic = "abort"
