--- a/orion-core/Cargo.toml
+++ b/orion-core/Cargo.toml
@@ -8,7 +8,7 @@ anyhow = { version = "1.0.70" }
 log = { version = "0.4.17" }
 glow = { version = "0.12.1" }
 glam = { version = "0.24.0" }
-egui = { version = "0.21.0" }
+egui = { version = "0.21.0", default-features = false }
 zip = { version = "0.6.5", default-features = false, features = [ "deflate" ] }
 walkdir = { version = "2.3.3" }
 png = { version = "0.17.8" }
