Add integration with physics engine

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,9 @@
 members = [
     "orion-core",
     "orion-template",
+
     "examples/benchmark",
+    "examples/physics",
     "examples/ui",
 ]
 
