--- a/examples/physics/Cargo.toml
+++ b/examples/physics/Cargo.toml
@@ -4,7 +4,7 @@ version = "1.0.0"
 edition = "2021"
 
 [dependencies]
-orion-core = { path = "../../orion-core" }
+orion-core = { path = "../../orion-core", features = [ "physics" ] }
 fastrand = { version = "1.9.0" }
 
 [build-dependencies]
