--- a/orion-core/Cargo.toml
+++ b/orion-core/Cargo.toml
@@ -21,6 +21,7 @@ rustc-hash = { version = "1.1.0" }
 kira = { version = "0.8.3", default-features = false, features = [ "cpal", "wav", "ogg" ], optional = true  }
 rapier2d = { version = "0.17.2", optional = true }
 fastrand = { version = "1.9.0" }
+arrayvec = { version = "0.7.4" }
 
 [build-dependencies]
 cfg_aliases = { version = "0.1.1" }
