--- a/orion-core/Cargo.toml
+++ b/orion-core/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [features]
 audio = [ "dep:kira" ]
-physics = [ "dep:rapier2d" ]
+physics = [ "dep:rapier2d", "dep:nalgebra" ]
 
 [dependencies]
 anyhow = { version = "1.0.71" }
@@ -19,6 +19,7 @@ quick-xml = { version = "0.29.0" }
 rustc-hash = { version = "1.1.0" }
 kira = { version = "0.8.3", default-features = false, features = [ "cpal", "wav", "ogg" ], optional = true  }
 rapier2d = { version = "0.17.2", optional = true }
+nalgebra = { version = "0.32.3", optional = true }
 fastrand = { version = "2.0.0" }
 arrayvec = { version = "0.7.4" }
 
