--- a/orion-core/Cargo.toml
+++ b/orion-core/Cargo.toml
@@ -19,7 +19,7 @@ quick-xml = { version = "0.29.0" }
 rustc-hash = { version = "1.1.0" }
 kira = { version = "0.8.3", default-features = false, features = [ "cpal", "wav", "ogg" ], optional = true  }
 rapier2d = { version = "0.17.2", optional = true }
-nalgebra = { version = "0.32.3", optional = true }
+nalgebra = { version = "0.32.3", features = [ "convert-glam024" ], optional = true }
 fastrand = { version = "2.0.0" }
 arrayvec = { version = "0.7.4" }
 
