--- a/examples/particles/Cargo.toml
+++ b/examples/particles/Cargo.toml
@@ -4,4 +4,4 @@ version = "1.0.0"
 edition = "2021"
 
 [dependencies]
-orion-core = { path = "../../orion-core" }
+capybara-core = { path = "../../capybara-core" }
