--- a/examples/physics/Cargo.toml
+++ b/examples/physics/Cargo.toml
@@ -4,4 +4,4 @@ version = "1.0.0"
 edition = "2021"
 
 [dependencies]
-capybara-core = { path = "../../capybara-core", features = [ "physics" ] }
+capybara = { path = "../../capybara", features = [ "physics" ] }
