--- a/template/Cargo.toml
+++ b/template/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "capybara-template"
+name = "template"
 version = "1.0.0"
 edition = "2021"
 
 [dependencies]
-capybara-core = { path = "../capybara-core" }
+capybara = { path = "../capybara" }
 
 [build-dependencies]
 cfg_aliases = { version = "0.1.1" }
