--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           command: doc
           args: --no-deps --document-private-items
-      - run: echo ^<meta http-equiv=^"refresh^" content=^"0; url=capybara^"^> > ./target/doc/index.html
+      - run: echo '<meta http-equiv="refresh" content="0; url=capybara">' > ./target/doc/index.html
       - uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
