--- a/template/Cargo.toml
+++ b/template/Cargo.toml
@@ -4,7 +4,7 @@ version = "1.0.0"
 edition = "2021"
 
 [dependencies]
-capybara = { path = "../capybara" }
+capybara = { path = "../capybara", features = [ "audio" ] }
 
 [build-dependencies]
 cfg_aliases = { version = "0.1.1" }
