Simplify closures and error handling

--- a/examples/physics/Cargo.toml
+++ b/examples/physics/Cargo.toml
@@ -5,3 +5,6 @@ edition = "2021"
 
 [dependencies]
 capybara = { path = "../../capybara", features = [ "physics" ] }
+
+[build-dependencies]
+anyhow = { version = "1.0.71" }
