Add basic support for LDtk

--- a/capybara/Cargo.toml
+++ b/capybara/Cargo.toml
@@ -22,6 +22,8 @@ rapier2d = { version = "0.17.2", optional = true }
 nalgebra = { version = "0.32.3", features = [ "convert-glam024" ], optional = true }
 fastrand = { version = "2.0.0" }
 arrayvec = { version = "0.7.4" }
+tinyjson = { version = "2.5.1" }
+colors-transform = { version = "0.2.11" }
 
 [build-dependencies]
 cfg_aliases = { version = "0.1.1" }
