Add LDtk entities

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ members = [
     "template",
 
     "examples/benchmark",
+    "examples/ldtk",
     "examples/lighting",
     "examples/particles",
     "examples/physics",
