--- a/capybara/Cargo.toml
+++ b/capybara/Cargo.toml
@@ -24,6 +24,7 @@ fastrand = { version = "2.0.1" }
 arrayvec = { version = "0.7.4" }
 tinyjson = { version = "2.5.1" }
 colors-transform = { version = "0.2.11" }
+noise = { version = "0.8.2" }
 
 [build-dependencies]
 cfg_aliases = { version = "0.1.1" }
