--- a/capybara/Cargo.toml
+++ b/capybara/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [features]
 audio = [ "dep:kira" ]
 physics = [ "dep:rapier2d", "dep:nalgebra" ]
+network = [ "tokio-tungstenite", "dep:url", "dep:futures-util", "dep:futures-channel" ]
 utils = [ "dep:noise", "dep:pathfinding" ]
 
 [dependencies]
@@ -35,11 +36,21 @@ cfg_aliases = { version = "0.1.1" }
 winapi = { version = "0.3.9", features = [ "winuser", "libloaderapi", "errhandlingapi" ]}
 simple_logger = { version = "4.2.0", default-features = false, features = [ "timestamps" ]}
 instant = { version = "0.1.12" }
+tokio = { version = "1.33.0", features = ["io-std", "rt", "rt-multi-thread", "sync", "macros" ] }
+tokio-tungstenite = { version = "0.20.1", features = [ "native-tls" ], optional = true }
+url = { version = "2.4.1", optional = true }
+futures-util = { version = "0.3", optional = true }
+futures-channel = { version = "0.3", optional = true }
 
 [target.'cfg(all(target_os = "linux", target_arch = "x86_64"))'.dependencies]
 x11 = { version = "2.21.0", features = [ "xlib", "xfixes", "glx" ]}
 simple_logger = { version = "4.2.0", default-features = false, features = [ "timestamps" ]}
 instant = { version = "0.1.12" }
+tokio = { version = "1.33.0", features = ["io-std", "rt", "rt-multi-thread", "sync", "macros" ] }
+tokio-tungstenite = { version = "0.20.1", features = [ "native-tls" ], optional = true }
+url = { version = "2.4.1", optional = true }
+futures-util = { version = "0.3", optional = true }
+futures-channel = { version = "0.3", optional = true }
 
 [target.'cfg(all(target_os = "unknown", target_arch = "wasm32"))'.dependencies]
 web-sys = { version = "0.3.65", features = [
@@ -57,7 +68,9 @@ web-sys = { version = "0.3.65", features = [
     "RequestInit",
     "RequestMode",
     "Response",
-    "Storage"
+    "Storage",
+    "WebSocket",
+    "MessageEvent"
 ]}
 js-sys = { version = "0.3.65" }
 wasm-bindgen = { version = "0.2.88" }
