--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,10 @@ members = [
     "examples/physics",
     "examples/template",
     "examples/ui",
+    
+    "examples/network/base",
+    "examples/network/client",
+    "examples/network/server",
 ]
 
 [profile.release]
