--- a/capybara/Cargo.toml
+++ b/capybara/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [features]
 audio = [ "dep:kira" ]
 physics = [ "dep:rapier2d", "dep:nalgebra" ]
-network = [ "tokio-tungstenite", "dep:url", "dep:futures-util", "dep:futures-channel" ]
+network = [ "tokio", "tokio-tungstenite", "dep:url", "dep:futures-util", "dep:futures-channel" ]
 utils = [ "dep:noise", "dep:pathfinding" ]
 
 [dependencies]
@@ -36,7 +36,7 @@ cfg_aliases = { version = "0.1.1" }
 winapi = { version = "0.3.9", features = [ "winuser", "libloaderapi", "errhandlingapi" ]}
 simple_logger = { version = "4.2.0", default-features = false, features = [ "timestamps" ]}
 instant = { version = "0.1.12" }
-tokio = { version = "1.34.0", features = ["io-std", "rt", "rt-multi-thread", "sync", "macros" ] }
+tokio = { version = "1.34.0", features = ["io-std", "rt", "rt-multi-thread", "sync", "macros" ], optional = true }
 tokio-tungstenite = { version = "0.20.1", features = [ "native-tls" ], optional = true }
 url = { version = "2.4.1", optional = true }
 futures-util = { version = "0.3", optional = true }
@@ -46,7 +46,7 @@ futures-channel = { version = "0.3", optional = true }
 x11 = { version = "2.21.0", features = [ "xlib", "xfixes", "glx" ]}
 simple_logger = { version = "4.2.0", default-features = false, features = [ "timestamps" ]}
 instant = { version = "0.1.12" }
-tokio = { version = "1.34.0", features = ["io-std", "rt", "rt-multi-thread", "sync", "macros" ] }
+tokio = { version = "1.34.0", features = ["io-std", "rt", "rt-multi-thread", "sync", "macros" ], optional = true }
 tokio-tungstenite = { version = "0.20.1", features = [ "native-tls" ], optional = true }
 url = { version = "2.4.1", optional = true }
 futures-util = { version = "0.3", optional = true }
