--- a/examples/network/server/Cargo.toml
+++ b/examples/network/server/Cargo.toml
@@ -5,4 +5,9 @@ edition = "2021"
 
 [dependencies]
 network-base = { path = "../base" }
-capybara = { path = "../../../capybara" }
+capybara = { path = "../../../capybara", features = [ "network" ] }
+tokio = { version = "1.34.0", features = ["io-std", "io-util", "rt", "rt-multi-thread", "sync", "macros", "time" ] }
+tokio-tungstenite = { version = "0.20.1", features = [ "native-tls" ] }
+url = { version = "2.4.1" }
+futures-util = { version = "0.3" }
+futures-channel = { version = "0.3" }
