--- a/capybara/Cargo.toml
+++ b/capybara/Cargo.toml
@@ -71,7 +71,7 @@ web-sys = { version = "0.3.65", features = [
     "Storage",
     "WebSocket",
     "MessageEvent",
-    "Blob"
+    "BinaryType"
 ]}
 js-sys = { version = "0.3.65" }
 wasm-bindgen = { version = "0.2.88" }
