--- a/examples/network/server/Cargo.toml
+++ b/examples/network/server/Cargo.toml
@@ -3,7 +3,7 @@ name = "network-server"
 version = "1.0.0"
 edition = "2021"
 
-[dependencies]
+[target.'cfg(not(all(target_os = "unknown", target_arch = "wasm32")))'.dependencies]
 network-base = { path = "../base" }
 capybara = { path = "../../../capybara", features = [ "network" ] }
 tokio = { version = "1.34.0", features = ["io-std", "io-util", "rt", "rt-multi-thread", "sync", "macros", "time" ] }
