--- a/capybara/Cargo.toml
+++ b/capybara/Cargo.toml
@@ -34,9 +34,9 @@ cfg_aliases = { version = "0.1.1" }
 
 [target.'cfg(all(target_os = "windows", target_arch = "x86_64"))'.dependencies]
 winapi = { version = "0.3.9", features = [ "winuser", "libloaderapi", "errhandlingapi" ]}
-simple_logger = { version = "4.3.0", default-features = false, features = [ "timestamps" ]}
+simple_logger = { version = "4.3.0" }
 instant = { version = "0.1.12" }
-tokio = { version = "1.34.0", features = ["io-std", "rt", "rt-multi-thread", "sync", "macros" ], optional = true }
+tokio = { version = "1.34.0", features = [ "rt-multi-thread", "macros" ], optional = true }
 tokio-tungstenite = { version = "0.20.1", features = [ "native-tls" ], optional = true }
 url = { version = "2.5.0", optional = true }
 futures-util = { version = "0.3", optional = true }
@@ -44,9 +44,9 @@ futures-channel = { version = "0.3", optional = true }
 
 [target.'cfg(all(target_os = "linux", target_arch = "x86_64"))'.dependencies]
 x11 = { version = "2.21.0", features = [ "xlib", "xfixes", "glx" ]}
-simple_logger = { version = "4.3.0", default-features = false, features = [ "timestamps" ]}
+simple_logger = { version = "4.3.0" }
 instant = { version = "0.1.12" }
-tokio = { version = "1.34.0", features = ["io-std", "rt", "rt-multi-thread", "sync", "macros" ], optional = true }
+tokio = { version = "1.34.0", features = [ "rt-multi-thread", "macros" ], optional = true }
 tokio-tungstenite = { version = "0.20.1", features = [ "native-tls" ], optional = true }
 url = { version = "2.5.0", optional = true }
 futures-util = { version = "0.3", optional = true }
