--- a/Cross.toml
+++ b/Cross.toml
@@ -1,2 +1,4 @@
 [target.x86_64-unknown-linux-gnu]
-pre-build = ["apt-get update && apt-get install libgl1-mesa-dev libasound2-dev p7zip-full --assume-yes"]
+pre-build = [
+    "apt-get update && apt-get install libgl1-mesa-dev libasound2-dev p7zip-full nodejs npm --assume-yes && npm install -g free-tex-packer-cli"
+]
