--- a/capybara/Cargo.toml
+++ b/capybara/Cargo.toml
@@ -34,7 +34,7 @@ pathfinding = { version = "4.4.0", optional = true }
 cfg_aliases = { version = "0.1.1" }
 
 [target.'cfg(all(target_os = "windows", target_arch = "x86_64"))'.dependencies]
-winapi = { version = "0.3.9", features = [ "winuser", "libloaderapi", "errhandlingapi" ]}
+winapi = { version = "0.3.9", features = [ "winuser", "libloaderapi", "errhandlingapi", "processthreadsapi", "psapi" ]}
 simple_logger = { version = "4.3.0" }
 instant = { version = "0.1.12" }
 tokio = { version = "1.34.0", features = [ "rt-multi-thread", "macros" ], optional = true }
