Add loading progress

--- a/capybara/Cargo.toml
+++ b/capybara/Cargo.toml
@@ -65,11 +65,9 @@ web-sys = { version = "0.3.66", features = [
     "KeyboardEvent", 
     "console",
     "CssStyleDeclaration",
-    "Request",
-    "RequestInit",
-    "RequestMode",
-    "RequestCache",
-    "Response",
+    "XmlHttpRequest",
+    "XmlHttpRequestResponseType",
+    "ProgressEvent",
     "Storage",
     "WebSocket",
     "MessageEvent",
