--- a/examples/network/benchmark/server/Cargo.toml
+++ b/examples/network/benchmark/server/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "network-server"
+name = "network-benchmark-server"
 version = "1.0.0"
 edition = "2021"
 
 [target.'cfg(not(all(target_os = "unknown", target_arch = "wasm32")))'.dependencies]
-network-base = { path = "../base" }
-capybara = { path = "../../../capybara", features = [ "network" ] }
+network-benchmark-base = { path = "../base" }
+capybara = { path = "../../../../capybara", features = [ "network" ] }
 log = { version = "0.4.20" }
 simple_logger = { version = "4.3.3", default-features = false, features = [ "timestamps" ]}
 tokio = { version = "1.35.1", features = [ "time" ] }
