--- a/examples/network/template/hub/Cargo.toml
+++ b/examples/network/template/hub/Cargo.toml
@@ -3,5 +3,14 @@ name = "network-template-hub"
 version = "1.0.0"
 edition = "2021"
 
-[dependencies]
-capybara = { path = "../../../../capybara" }
+[target.'cfg(not(all(target_os = "unknown", target_arch = "wasm32")))'.dependencies]
+network-template-base = { path = "../base" }
+capybara = { path = "../../../../capybara", features = [ "network" ] }
+log = { version = "0.4.20" }
+simple_logger = { version = "4.3.3", default-features = false, features = [ "timestamps" ]}
+tokio = { version = "1.35.1", features = [ "time", "io-std" ] }
+futures-util = { version = "0.3" }
+futures-channel = { version = "0.3" }
+
+[build-dependencies]
+cfg_aliases = { version = "0.2.0" }
