--- a/examples/network/template/hub/Cargo.toml
+++ b/examples/network/template/hub/Cargo.toml
@@ -7,11 +7,12 @@ edition = "2021"
 network-template-base = { path = "../base" }
 capybara = { path = "../../../../capybara", features = [ "network" ] }
 log = { version = "0.4.20" }
-simple_logger = { version = "4.3.3", default-features = false, features = [ "timestamps" ]}
 tokio = { version = "1.35.1", features = [ "time", "io-std" ] }
 futures-util = { version = "0.3" }
 futures-channel = { version = "0.3" }
 tinyjson = { version = "2.5.1" }
+fern = { version = "0.6.2", features = [ "date-based" ] }
+chrono = { version = "0.4.32" }
 
 [build-dependencies]
 cfg_aliases = { version = "0.2.0" }
