--- a/examples/network/template/server/Cargo.toml
+++ b/examples/network/template/server/Cargo.toml
@@ -3,5 +3,16 @@ name = "network-template-server"
 version = "1.0.0"
 edition = "2021"
 
-[dependencies]
-capybara = { path = "../../../../capybara" }
+[target.'cfg(not(all(target_os = "unknown", target_arch = "wasm32")))'.dependencies]
+network-template-base = { path = "../base" }
+capybara = { path = "../../../../capybara", features = [ "network" ] }
+log = { version = "0.4.20" }
+tokio = { version = "1.35.1", features = [ "time", "io-std" ] }
+futures-util = { version = "0.3" }
+futures-channel = { version = "0.3" }
+tinyjson = { version = "2.5.1" }
+fern = { version = "0.6.2", features = [ "date-based" ] }
+chrono = { version = "0.4.32" }
+
+[build-dependencies]
+cfg_aliases = { version = "0.2.0" }
