--- a/examples/network/benchmark/server/Cargo.toml
+++ b/examples/network/benchmark/server/Cargo.toml
@@ -3,7 +3,7 @@ name = "network-benchmark-server"
 version = "1.0.0"
 edition = "2021"
 
-[target.'cfg(not(all(target_os = "unknown", target_arch = "wasm32")))'.dependencies]
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 network-benchmark-base = { path = "../base" }
 capybara = { path = "../../../../capybara", features = [ "network" ] }
 log = { version = "0.4.20" }
