--- a/capybara/Cargo.toml
+++ b/capybara/Cargo.toml
@@ -5,79 +5,85 @@ edition = "2021"
 
 [features]
 audio = [ "dep:kira" ]
-physics = [ "dep:rapier2d", "dep:nalgebra" ]
-network = [ "tokio", "tokio-tungstenite", "dep:url", "dep:futures-util", "dep:futures-channel" ]
+network = [ "dep:futures-channel", "dep:futures-util", "dep:tokio", "dep:tokio-tungstenite", "dep:url" ]
+physics = [ "dep:nalgebra", "dep:rapier2d" ]
 utils = [ "dep:noise", "dep:pathfinding" ]
 
 [dependencies]
 anyhow = { version = "1.0.79" }
-log = { version = "0.4.20" }
-glow = { version = "0.13.1" }
-glam = { version = "0.24.2" }
+arrayvec = { version = "0.7.4" }
+colors-transform = { version = "0.2.11" }
 egui = { version = "0.24.1", default-features = false }
 egui_plot = { version = "0.24.2" }
-zip = { version = "0.6.6", default-features = false, features = [ "deflate" ] }
-png = { version = "0.17.11" }
-quick-xml = { version = "0.31.0" }
-rustc-hash = { version = "1.1.0" }
-kira = { version = "0.8.7", default-features = false, features = [ "cpal", "wav", "ogg" ], optional = true  }
-rapier2d = { version = "0.18.0", optional = true }
-nalgebra = { version = "0.32.3", features = [ "convert-glam024" ], optional = true }
 fastrand = { version = "2.0.1" }
-arrayvec = { version = "0.7.4" }
-tinyjson = { version = "2.5.1" }
-colors-transform = { version = "0.2.11" }
+glam = { version = "0.24.2" }
+glow = { version = "0.13.1" }
+kira = { version = "0.8.7", default-features = false, features = [ "cpal", "ogg", "wav" ], optional = true  }
+log = { version = "0.4.20" }
+nalgebra = { version = "0.32.3", features = [ "convert-glam024" ], optional = true }
 noise = { version = "0.8.2", optional = true }
 pathfinding = { version = "4.8.2", optional = true }
+png = { version = "0.17.11" }
+quick-xml = { version = "0.31.0" }
+rapier2d = { version = "0.18.0", optional = true }
+rustc-hash = { version = "1.1.0" }
+tinyjson = { version = "2.5.1" }
+zip = { version = "0.6.6", default-features = false, features = [ "deflate" ] }
 
 [build-dependencies]
 cfg_aliases = { version = "0.2.0" }
 
 [target.'cfg(target_os = "windows")'.dependencies]
-winapi = { version = "0.3.9", features = [ "winuser", "libloaderapi", "errhandlingapi", "processthreadsapi", "psapi" ]}
-simple_logger = { version = "4.3.3" }
+futures-channel = { version = "0.3", optional = true }
+futures-util = { version = "0.3", optional = true }
 instant = { version = "0.1.12" }
-tokio = { version = "1.36.0", features = [ "rt-multi-thread", "macros" ], optional = true }
+simple_logger = { version = "4.3.3" }
+tokio = { version = "1.36.0", features = [ "macros", "rt-multi-thread" ], optional = true }
 tokio-tungstenite = { version = "0.21.0", features = [ "native-tls" ], optional = true }
 url = { version = "2.5.0", optional = true }
-futures-util = { version = "0.3", optional = true }
-futures-channel = { version = "0.3", optional = true }
+winapi = { version = "0.3.9", features = [
+    "errhandlingapi",
+    "libloaderapi",
+    "processthreadsapi",
+    "psapi",
+    "winuser"
+]}
 
 [target.'cfg(target_os = "linux")'.dependencies]
-x11 = { version = "2.21.0", features = [ "xlib", "xfixes", "glx" ]}
-simple_logger = { version = "4.3.3" }
+futures-channel = { version = "0.3", optional = true }
+futures-util = { version = "0.3", optional = true }
 instant = { version = "0.1.12" }
+simple_logger = { version = "4.3.3" }
 tokio = { version = "1.36.0", features = [ "rt-multi-thread", "macros" ], optional = true }
 tokio-tungstenite = { version = "0.21.0", features = [ "native-tls" ], optional = true }
 url = { version = "2.5.0", optional = true }
-futures-util = { version = "0.3", optional = true }
-futures-channel = { version = "0.3", optional = true }
+x11 = { version = "2.21.0", features = [ "xlib", "xfixes", "glx" ]}
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
-web-sys = { version = "0.3.68", features = [
-    "Window", 
-    "Document", 
-    "Element", 
-    "HtmlCanvasElement", 
-    "CanvasRenderingContext2d", 
-    "MouseEvent", 
-    "WheelEvent", 
-    "KeyboardEvent", 
-    "console",
-    "CssStyleDeclaration",
-    "XmlHttpRequest",
-    "XmlHttpRequestResponseType",
-    "ProgressEvent",
-    "Storage",
-    "WebSocket",
-    "MessageEvent",
-    "BinaryType",
-    "Touch",
-    "TouchEvent",
-    "TouchList"
-]}
+console_error_panic_hook = { version = "0.1.7" }
+console_log = { version = "1.0.0" }
+instant = { version = "0.1.12", features = [ "wasm-bindgen" ] }
 js-sys = { version = "0.3.68" }
 wasm-bindgen = { version = "0.2.91" }
-console_log = { version = "1.0.0" }
-console_error_panic_hook = { version = "0.1.7" }
-instant = { version = "0.1.12", features = [ "wasm-bindgen" ] }
+web-sys = { version = "0.3.68", features = [
+    "BinaryType",
+    "CanvasRenderingContext2d",
+    "console",
+    "CssStyleDeclaration",
+    "Document",
+    "Element",
+    "HtmlCanvasElement",
+    "KeyboardEvent",
+    "MessageEvent",
+    "MouseEvent",
+    "ProgressEvent",
+    "Storage",
+    "Touch",
+    "TouchEvent",
+    "TouchList",
+    "WebSocket",
+    "WheelEvent",
+    "Window",
+    "XmlHttpRequest",
+    "XmlHttpRequestResponseType"
+]}
