--- a/capybara/Cargo.toml
+++ b/capybara/Cargo.toml
@@ -57,7 +57,7 @@ simple_logger = { version = "4.3.3" }
 tokio = { version = "1.36.0", features = [ "rt-multi-thread", "macros" ], optional = true }
 tokio-tungstenite = { version = "0.21.0", features = [ "native-tls" ], optional = true }
 url = { version = "2.5.0", optional = true }
-x11 = { version = "2.21.0", features = [ "xlib", "xfixes", "glx" ]}
+x11 = { version = "2.21.0", features = [ "glx", "xfixes", "xlib" ]}
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 console_error_panic_hook = { version = "0.1.7" }
