--- a/examples/network/simple/client/Cargo.toml
+++ b/examples/network/simple/client/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "network-benchmark-client"
+name = "simple-client"
 version = "1.0.0"
 edition = "2021"
 
 [dependencies]
 capybara = { path = "../../../../capybara", features = [ "network" ] }
-network-benchmark-base = { path = "../base" }
+simple-base = { path = "../base" }
 
 [build-dependencies]
 anyhow = { version = "1.0.79" }
