--- a/capybara/Cargo.toml
+++ b/capybara/Cargo.toml
@@ -54,7 +54,7 @@ futures-channel = { version = "0.3", optional = true }
 futures-util = { version = "0.3", optional = true }
 instant = { version = "0.1.12" }
 simple_logger = { version = "4.3.3" }
-tokio = { version = "1.36.0", features = [ "rt-multi-thread", "macros" ], optional = true }
+tokio = { version = "1.36.0", features = [ "macros", "rt-multi-thread" ], optional = true }
 tokio-tungstenite = { version = "0.21.0", features = [ "native-tls" ], optional = true }
 url = { version = "2.5.0", optional = true }
 x11 = { version = "2.21.0", features = [ "glx", "xfixes", "xlib" ]}
