--- a/examples/powder/Cargo.toml
+++ b/examples/powder/Cargo.toml
@@ -4,6 +4,7 @@ version = "1.0.0"
 edition = "2021"
 
 [dependencies]
+byteorder = { version = "1.5.0" }
 capybara = { path = "../../capybara", features = [ "physics", "powder" ] }
 
 [build-dependencies]
