--- a/capybara/Cargo.toml
+++ b/capybara/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 audio = ["dep:kira"]
 network = ["dep:futures-channel", "dep:futures-util", "dep:tokio", "dep:tokio-tungstenite", "dep:url"]
 physics = ["dep:nalgebra", "dep:rapier2d"]
-powder = []
+powder = ["dep:rayon"]
 utils = ["dep:noise", "dep:pathfinding"]
 
 [dependencies]
@@ -27,6 +27,7 @@ pathfinding = { version = "4.8.2", optional = true }
 png = { version = "0.17.11" }
 quick-xml = { version = "0.31.0" }
 rapier2d = { version = "0.18.0", optional = true }
+rayon = { version = "1.10.0", optional = true }
 rustc-hash = { version = "1.1.0" }
 tinyjson = { version = "2.5.1" }
 zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
